--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,17 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
+    //slack-api
     implementation 'com.slack.api:slack-api-client:1.15.0'
     implementation 'com.slack.api:slack-api-model:1.15.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
-    implementation "org.slf4j:slf4j-simple:1.6.1"
+    //bolt
+    implementation "org.slf4j:slf4j-simple:1.7.36"
+
+    implementation "com.slack.api:bolt:1.27.2"
+    implementation "com.slack.api:bolt-servlet:1.27.2"
+    implementation "com.slack.api:bolt-jetty:1.27.2"
 }
 
 test {
